# wabi

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix  justfile
src/: cli.rs  lib.rs  main.rs  model.rs  refresh.rs  render.rs  state.rs
src/providers/: claude.rs  codex.rs
tests/: provider_parsing.rs  rendering.rs  state_refresh.rs
tests/fixtures/: claude_usage.json  codex_rate_limits.json
