[package]
name = "wabi"
version = "0.1.1"
edition = "2021"
description = "Render cached Claude and Codex rate-limit usage in terminal status surfaces (statusline, tmux)."
license = "MIT"
repository = "https://github.com/mei28/wabi"
readme = "README.md"
authors = ["mei <mei28aquarius@gmail.com>"]
keywords = ["cli", "claude", "codex", "rate-limit", "statusline"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
fs2 = "0.4"
owo-colors = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ureq = "3"
